[package]
name = "expr-clap-dispatching"
version = "0.1.0"
authors = ["Wink Saville <wink@saville.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"

[build-dependencies]
vergen = "5"
#vergen = { version = "5", default-features = false, features = ["build", "rustc"] }
